package agentic.workflow.llm;

public enum SchemaType {
    // INT, STRING, and BOOLEAN represent simple scalar values.
    // LIST_INT and LIST_STRING represent lists containing integers or strings.
    // MAP_STRING_STRING represents a map where both keys and values are strings.

    INT, STRING, BOOLEAN, LIST_INT, LIST_STRING, MAP_STRING_STRING;
}